# ChangeLog for net-analyzer/rrdtool
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.68 2005/06/18 23:38:13 vanquirius Exp $

  18 Jun 2005; Marcelo Goes <vanquirius@gentoo.org> rrdtool-1.2.6-r1.ebuild,
  -rrdtool-1.2.8.ebuild:
  Marking 1.2.6-r1 stable to push doc USE flag fix. Also, taking 1.2.8 out for
  bug 94411.

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> rrdtool-1.2.6.ebuild:
  Stable on ppc.

  12 Jun 2005; Bryan Østergaard <kloeri@gentoo.org> rrdtool-1.2.6.ebuild:
  Stable on alpha.

  12 Jun 2005; Jason Wever <weeve@gentoo.org> rrdtool-1.2.6.ebuild:
  Stable on SPARC.

*rrdtool-1.2.6-r1 (10 Jun 2005)

  10 Jun 2005; Benjamin Smee <strerror@gentoo.org> +rrdtool-1.2.6-r1.ebuild:
  Fixed inappropriate doc placemente as per bug 95665.

  05 Jun 2005; Rene Nussbaumer <killerfox@gentoo.org> rrdtool-1.2.6.ebuild:
  Stable on hppa.

  04 Jun 2005; Marcelo Goes <vanquirius@gentoo.org>
  -rrdtool-1.0.45-r2.ebuild, -rrdtool-1.0.47.ebuild, rrdtool-1.2.6.ebuild:
  Marked 1.2.6 x86 stable and removing old versions. Fixes bug 94962. Thanks
  to Daniel Webert <rockoo@gmail.com>.

*rrdtool-1.2.9 (30 May 2005)

  30 May 2005; Benjamin Smee <strerror@gentoo.org> +rrdtool-1.2.9.ebuild:
  Version bump for bug 94465

  26 May 2005; Rene Nussbaumer <killerfox@gentoo.org> rrdtool-1.0.49.ebuild:
  Stable on hppa

  18 May 2005; Marcelo Goes <vanquirius@gentoo.org> rrdtool-1.2.6.ebuild,
  rrdtool-1.2.8.ebuild:
  Changing sed line to fix problem with tcl bindings. Fixes bug 93062. Thanks to
  Brandon Hale <tseng@gentoo.org>.

*rrdtool-1.2.8 (18 May 2005)

  18 May 2005; Aaron Walker <ka0ttic@gentoo.org> +rrdtool-1.2.8.ebuild:
  Version bump for bug 92866; added python and doc USE flags.

  14 May 2005; Marcelo Goes <vanquirius@gentoo.org> -rrdtool-1.2.0.ebuild,
  -rrdtool-1.2.1.ebuild, -rrdtool-1.2.2.ebuild: