@@ -1,12 +1,14 @@
 MD5 7245abe6326ff3cc840e5092c1b60890 rrdtool-1.0.49.ebuild 2729
 MD5 177f6939c1ba72adbbd42b99ea93121f rrdtool-1.0.50.ebuild 2753
+MD5 fef8045c2bacc8cea9464b5814d2c1b3 rrdtool-1.2.10.ebuild 2736
 MD5 5237327ba17008615f4ee3498d1e12aa rrdtool-1.2.9.ebuild 2734
-MD5 b9c27df69570fb04a3afb90aa0f61e23 ChangeLog 11116
+MD5 2e59b19c33a726ec0cb09a0992664605 ChangeLog 11315
 MD5 3e2c11de8a1b8b219f0640895346387b rrdtool-1.2.6-r1.ebuild 2637
 MD5 6fc50ca1a5c083a6185c8ab9568d74e3 rrdtool-1.2.6.ebuild 2691
 MD5 1a739170238a1fae241a8a0df21462e9 metadata.xml 241
 MD5 5027f79618fbf229b145b204b1e595ce files/digest-rrdtool-1.0.49 67
 MD5 0f97ed6174056bc1f72fbd7eb964f3f6 files/digest-rrdtool-1.0.50 67
+MD5 f16d0d8d5db1ed4ece7a3221c9fb8266 files/digest-rrdtool-1.2.10 67
 MD5 7ee6d2e6d1bc0c21aaea586600840694 files/digest-rrdtool-1.2.6 65
 MD5 ddcbf31c065a424ce3ad6595d1b5ea8d files/digest-rrdtool-1.2.9 65
 MD5 7ee6d2e6d1bc0c21aaea586600840694 files/digest-rrdtool-1.2.6-r1 65
